Bug 1326574: Add some needed includes/forward-declarations in layout/style, to preemptively fix unified bustage. r=xidorn

MozReview-Commit-ID: 2vM3aiR87T3